# waymark

./: Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
core-python/: execution_graph.md
core-python/src/rappel_core/: __init__.py
core-python/tests/: test_runner_state.py
crates/lib/backend-activity-log/: Cargo.toml
crates/lib/backend-activity-log/src/: lib.rs
crates/lib/backend-replay/: Cargo.toml
crates/lib/backend-replay/src/: lib.rs
crates/lib/replay-activity-core/: Cargo.toml
crates/lib/replay-activity-core/src/: lib.rs
crates/lib/replay-activity-io/: Cargo.toml
crates/waymark/src/: config.rs
docs/: Architecture.md
example_app/: Dockerfile  README.md  docker-compose.yml
example_app/src/example_app/: web.py
migrations/: 0007_backoff_policy.sql
proto/: ast.proto  messages.proto
python/: pyproject.toml
python/proto/: messages_pb2.py  messages_pb2.pyi
python/scripts/: ast_workflow_demo.py  benchmark_instances.py
python/src/carabiner_worker/: __init__.py  bridge.py  workflow.py  workflow_dag.py  workflow_runtime.py
python/src/rappel/: __init__.py  bridge.py  ir_builder.py  workflow.py  workflow_dag.py  workflow_runtime.py
python/tests/: test_ir_builder.py  test_workflow.py  test_workflow_dag.py  test_workflow_runtime.py
python/tests/fixtures_sleep/: sleep_aliased_import.py  sleep_from_import.py  (+1 more)
scripts/: analyze_timing.py  assemble_wheels.py  benchmark_report.py  build_wheel.py  coverage_report.py  run_benchmarks.py
src/: ast_eval.rs  benchmark.rs  benchmark_actions.rs  benchmark_common.rs  benchmark_instances.rs  completion.rs  config.rs  dag.rs  dag_state.rs  db.rs  dispatcher.rs  lexer.rs  lib.rs  parser.rs  polling.rs  python_worker.rs  runner.rs  server_web.rs  worker.rs
src/benchmark/: actions.rs  fanout.rs  instances.rs  mod.rs
src/db/: webapp.rs
src/integration_tests/: mod.rs
src/waymark_core/: runloop.rs
templates/: base.html  error.html  home.html  workflow.html
tests/: integration_harness.rs  integration_test.rs
tests/fixtures/: exception_workflow.py  sequential_workflow.py
(+11 files in other folders)
