[package]
name = "waymark-backend-replay"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = { workspace = true }
uuid = { workspace = true }
waymark-replay-activity-core = { workspace = true }
waymark-backends-core = { workspace = true }
waymark-core-backend = { workspace = true }
waymark-workflow-registry-backend = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
