[package]
name = "waymark-replay-activity-core"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
uuid = { workspace = true, features = ["serde"] }
waymark-backends-core = { workspace = true }
waymark-core-backend = { workspace = true }
waymark-workflow-registry-backend = { workspace = true }
